--- a/delete.html
+++ b/delete.html
@@ -47,13 +47,14 @@
             height: 20px;
             left: 0;
             right: 0;
-            bottom: 0;
+            top: 190px;
         }
         #scaleVertical {
             width: 20px;
             top: 0;
             bottom: 0;
-            left: 0;
+            left: 50%;
+            transform: translateX(-50%);
         }
         #horizontalLine, #verticalLine {
             position: absolute;
@@ -63,22 +64,23 @@
             height: 2px;
             left: 0;
             right: 0;
-            bottom: 20px;
+            top: 50%;
         }
         #verticalLine {
             width: 2px;
             top: 0;
-            bottom: 20px;
-            left: 20px;
+            bottom: 0;
+            left: 50%;
         }
-        #dot {
-            width: 10px;
-            height: 10px;
-            background-color: #ff4757;
+        #mouse {
+            width: 20px;
+            height: 20px;
+            background-color: #4a90e2;
             border-radius: 50%;
             position: absolute;
-            bottom: 16px;
-            left: 16px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             cursor: pointer;
         }
         #result {
@@ -116,9 +118,9 @@
                 <div id="scaleVertical" class="scale"></div>
                 <div id="horizontalLine"></div>
                 <div id="verticalLine"></div>
-                <div id="dot"></div>
+                <div id="mouse"></div>
             </div>
-            <div id="result">Move the dot to see results</div>
+            <div id="result">Move the mouse to see results</div>
         </section>
 
         <section class="analyzer">
@@ -152,14 +154,14 @@
     <script>
         // Mouse DPI Analyzer
         const mouseBox = document.getElementById('mouseBox');
-        const dot = document.getElementById('dot');
+        const mouse = document.getElementById('mouse');
         const result = document.getElementById('result');
         const scaleHorizontal = document.getElementById('scaleHorizontal');
         const scaleVertical = document.getElementById('scaleVertical');
 
         let isDragging = false;
-        let horizontalPixels = 0;
-        let verticalPixels = 0;
+        let isHorizontal = true;
+        let pixelDistance = 0;
         const stopDistance = 7.4 * 96; // 7.4 inches in pixels
 
         function updateScales() {
@@ -168,13 +170,13 @@
             
             function createScaleMarkers(scale, isVertical) {
                 let scaleHTML = '';
-                const maxDistance = isVertical ? boxHeight - 20 : boxWidth - 20;
+                const maxDistance = isVertical ? boxHeight : boxWidth;
                 for (let i = 0; i <= maxDistance; i += 48) { // 48 pixels = 0.5 inches
-                    const inches = ((maxDistance - i) / 96).toFixed(1);
-                    const position = isVertical ? `bottom: ${i}px;` : `left: ${i}px;`;
+                    const inches = (i / 96).toFixed(1);
+                    const position = isVertical ? `top: ${i}px;` : `left: ${i}px;`;
                     const size = isVertical ? 'width: 10px;' : 'height: 10px;';
-                    scaleHTML += `<div style="position:absolute;${position}${size}border-${isVertical ? 'bottom' : 'left'}:1px solid #333;"></div>`;
-                    scaleHTML += `<div style="position:absolute;${position}font-size:10px;${isVertical ? 'left' : 'bottom'}:20px;">${inches}"</div>`;
+                    scaleHTML += `<div style="position:absolute;${position}${size}border-${isVertical ? 'top' : 'left'}:1px solid #333;"></div>`;
+                    scaleHTML += `<div style="position:absolute;${position}font-size:10px;${isVertical ? 'left' : 'top'}:20px;">${inches}"</div>`;
                 }
                 scale.innerHTML = scaleHTML;
             }
@@ -183,44 +185,63 @@
             createScaleMarkers(scaleVertical, true);
         }
 
-        function updateDotPosition(e) {
+        function updateMousePosition(e) {
             const boxRect = mouseBox.getBoundingClientRect();
-            let dotX = e.clientX - boxRect.left - dot.offsetWidth / 2;
-            let dotY = boxRect.bottom - e.clientY - dot.offsetHeight / 2;
+            const centerX = boxRect.width / 2;
+            const centerY = boxRect.height / 2;
 
-            dotX = Math.max(16, Math.min(dotX, boxRect.width - 16));
-            dotY = Math.max(16, Math.min(dotY, boxRect.height - 16));
+            let mouseX, mouseY;
 
-            horizontalPixels = dotX - 16;
-            verticalPixels = dotY - 16;
+            if (isHorizontal) {
+                mouseX = e.clientX - boxRect.left - mouse.offsetWidth / 2;
+                mouseX = Math.max(0, Math.min(mouseX, boxRect.width - mouse.offsetWidth));
+                mouseY = centerY - mouse.offsetHeight / 2;
+                pixelDistance = Math.abs(mouseX - centerX);
+            } else {
+                mouseX = centerX - mouse.offsetWidth / 2;
+                mouseY = e.clientY - boxRect.top - mouse.offsetHeight / 2;
+                mouseY = Math.max(0, Math.min(mouseY, boxRect.height - mouse.offsetHeight));
+                pixelDistance = Math.abs(mouseY - centerY);
+            }
 
-            if (horizontalPixels > stopDistance) horizontalPixels = stopDistance;
-            if (verticalPixels > stopDistance) verticalPixels = stopDistance;
+            if (pixelDistance > stopDistance) {
+                if (isHorizontal) {
+                    mouseX = mouseX > centerX ? centerX + stopDistance : centerX - stopDistance;
+                } else {
+                    mouseY = mouseY > centerY ? centerY + stopDistance : centerY - stopDistance;
+                }
+                pixelDistance = stopDistance;
+            }
 
-            dot.style.left = `${dotX}px`;
-            dot.style.bottom = `${dotY}px`;
+            mouse.style.left = `${mouseX}px`;
+            mouse.style.top = `${mouseY}px`;
 
-            const horizontalInches = (horizontalPixels / 96).toFixed(2);
-            const verticalInches = (verticalPixels / 96).toFixed(2);
-            const horizontalDPI = Math.round((window.devicePixelRatio * 96 * horizontalPixels) / (7.4 * 96));
-            const verticalDPI = Math.round((window.devicePixelRatio * 96 * verticalPixels) / (7.4 * 96));
+            const distanceInches = (pixelDistance / 96).toFixed(2);
+            const dpi = Math.round((window.devicePixelRatio * 96 * pixelDistance) / (7.4 * 96));
 
             result.innerHTML = `
-                Horizontal Distance: ${horizontalInches}" (${horizontalPixels.toFixed(2)}px)<br>
-                Vertical Distance: ${verticalInches}" (${verticalPixels.toFixed(2)}px)<br>
-                Horizontal DPI: ${horizontalDPI}<br>
-                Vertical DPI: ${verticalDPI}
+                Pixel Distance: ${pixelDistance.toFixed(2)}px<br>
+                Distance: ${distanceInches}"<br>
+                Calculated DPI: ${dpi}
             `;
         }
 
         mouseBox.addEventListener('mousedown', (e) => {
             isDragging = true;
-            updateDotPosition(e);
+            const boxRect = mouseBox.getBoundingClientRect();
+            const centerX = boxRect.width / 2;
+            const centerY = boxRect.height / 2;
+            const clickX = e.clientX - boxRect.left;
+            const clickY = e.clientY - boxRect.top;
+
+            isHorizontal = Math.abs(clickY - centerY) < Math.abs(clickX - centerX);
+
+            updateMousePosition(e);
         });
 
         document.addEventListener('mousemove', (e) => {
             if (isDragging) {
-                updateDotPosition(e);
+                updateMousePosition(e);
             }
         });
 
