chrome-extension-for-keyword-extraction-from-urls.html

--- a/chrome-extension-for-keyword-extraction-from-urls.html
+++ b/chrome-extension-for-keyword-extraction-from-urls.html
@@ -198,7 +198,7 @@
             Simply download and install the extension from the Chrome Web Store, then click on the extension icon to access its tools. Use the intuitive interface to extract keywords, group them, analyze density, or generate slugs.
         </p>
 
-        <a href="https://keywordsfromurls.com/" class="button">Download Chrome Extension</a>
+        <a href="https://chromewebstore.google.com/detail/keywords-from-urls-bloggi/daclbfnlfjkfgkcfdepgdlbchndjhehd" class="button">Download Chrome Extension</a>
 
         <h2>FAQs</h2>
         <p><strong>Q:</strong> Does this extension collect any user data?<br>
