--- a/index.html
+++ b/index.html
@@ -296,9 +296,54 @@
         .share-icons a:hover {
             color: #007BFF;
         }
+         #faq {
+        background-color: #f9f9f9;
+        padding: 40px 20px;
+        margin-top: 50px;
+    }
+    #faq h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .faq-item {
+        margin-bottom: 20px;
+    }
+    .faq-item h3 {
+        font-size: 1.2em;
+        color: #333;
+    }
+    .faq-item p {
+        font-size: 1em;
+        color: #666;
+        line-height: 1.6;
+    }
     </style>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
+
+    {
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Keyword Extractor Tool",
+  "url": "https://keywordsfromurls.com/",
+  "description": "Extract relevant keywords from URLs or text with our Keyword Extractor tool. Get keywords instantly and use them for your SEO or content creation needs.",
+  "mainEntityOfPage": "https://keywordsfromurls.com/",
+  "potentialAction": {
+    "@type": "Action",
+    "name": "Extract Keywords",
+    "target": "https://keywordsfromurls.com/",
+    "actionStatus": "ActiveActionStatus"
+  },
+  "image": "",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Keywords from urls",
+    "url": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s1080/Keywords%20From%20Urls.png"
+  }
+}
+
+
+
 </head>
 
 <body>
@@ -468,6 +513,32 @@
                 <a href="https://wa.me/?text=Check%20out%20this%20awesome%20tool%20for%20extracting%20keywords%20from%20URLs:%20https://keywordsfromurls.com" target="_blank" title="Share on WhatsApp"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
+    <!-- FAQ Section -->
+<section id="faq">
+    <div class="container">
+        <h2>Frequently Asked Questions (FAQ)</h2>
+        <div class="faq-item">
+            <h3>What is the purpose of the Keywords from URLs tool?</h3>
+            <p>The Keywords from URLs tool extracts meaningful keywords from segment of a URL. It helps you identify relevant keywords for SEO, content creation, or competitive analysis, making it easier to enhance your website's visibility on search engines.</p>
+        </div>
+        <div class="faq-item">
+            <h3>How does the Keyword Extractor tool work?</h3>
+            <p>The Keyword Extractor tool works by analyzing a URL and extracting the last meaningful segment of the URL path. It ignores file extensions (e.g., `.html`) and domain names (e.g., `.com`), providing you with precise keywords that you can use to improve your content and SEO strategy.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Can I use the Keywords from URLs tool for any URL?</h3>
+            <p>Yes, you can use the Keywords from URLs tool for any valid URL. The tool is designed to handle various types of URLs, including product pages, blog posts, and category pages, making it a versatile tool for extracting keywords from different types of online content.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Is it necessary to log in to use the Keyword Extractor tool?</h3>
+            <p>No, you don’t need to log in to use the Keyword Extractor tool. Simply paste the URL into the input field, and the tool will instantly generate the keywords for you without requiring an account or login.</p>
+        </div>
+        <div class="faq-item">
+            <h3>How can the Keyword Grouping and Keyword Density tools benefit my SEO strategy?</h3>
+            <p>The Keyword Grouping tool helps you organize keywords into related groups, improving content relevance and targeting. The Keyword Density tool helps you calculate how often certain keywords appear in your content, ensuring optimal keyword usage for better SEO performance. Both tools work together to refine and optimize your content strategy.</p>
+        </div>
+    </div>
+</section>
 
      <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
