Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -211,7 +211,44 @@
                 font-size: 14px;
             }
         }
+        #faq {
+        background-color: #f9f9f9;
+        padding: 40px 20px;
+        margin-top: 50px;
+    }
+    #faq h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .faq-item {
+        margin-bottom: 20px;
+    }
+    .faq-item h3 {
+        font-size: 1.2em;
+        color: #333;
+    }
+    .faq-item p {
+        font-size: 1em;
+        color: #666;
+        line-height: 1.6;
+    }
     </style>
+   <script> 
+       {
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Slug Generator Tool",
+  "url": "https://keywordsfromurls.com/Slug-Generator.html",
+  "description": "Convert your titles or phrases into SEO-friendly slugs with our Slug Generator tool. Optimize your URLs for better search engine rankings.",
+  "mainEntityOfPage": "https://keywordsfromurls.com/Slug-Generator.html",
+  "potentialAction": {
+    "@type": "Action",
+    "name": "Generate Slug",
+    "target": "https://keywordsfromurls.com/Slug-Generator.html",
+    "actionStatus": "ActiveActionStatus"
+  }
+}
+   </script>
 </head>
 <body>
     <!-- Header -->
@@ -275,6 +312,24 @@
             <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
             <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
         </div>
+      <section id="faq">
+    <div class="container">
+        <h2>Frequently Asked Questions (Slug Generator)</h2>
+        <div class="faq-item">
+            <h3>What is the Slug Generator tool?</h3>
+            <p>The Slug Generator tool helps you create SEO-friendly slugs for your URLs. It converts titles or text into clean, readable, and optimized slugs, which are essential for better search engine ranking and user experience.</p>
+        </div>
+        <div class="faq-item">
+            <h3>How do I generate a slug?</h3>
+            <p>To generate a slug, simply enter the title or text in the input field, choose the separator (hyphen or underscore), and click the "Generate Slug" button. The tool will automatically create a clean and SEO-optimized slug for you to use in your URLs.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Can I remove numbers or dots from the generated slug?</h3>
+            <p>Yes! The Slug Generator tool gives you the option to remove numbers, dots, or any unwanted characters from the generated slug. You can choose to exclude these characters for a cleaner and more focused slug.</p>
+        </div>
+    </div>
+</section>
+
     </footer>
 
     <script>
