--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     </style>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
-
+<script>
     {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -342,7 +342,7 @@
   }
 }
 
-
+</script>
 
 </head>
 
